--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -121,7 +121,7 @@ b, strong {
 .main {
     background: url('/img/background.png') center no-repeat;
     background-size: cover;
-    height: 550px;
+    padding-bottom: 150px;
     .main__nav {
         height: 100px;
         display: flex;
@@ -169,6 +169,7 @@ b, strong {
             a {
                 color: #c1c1c1;
                 text-decoration: none;
+                transition: all 0.6s ease;
             }
             &:hover {
                 border-bottom-color: #3d3d3d;
@@ -198,7 +199,7 @@ b, strong {
             margin-top: -10px;
         }
         .btn {
-            margin-top: 40px;
+            margin-top: 100px;
             display: block;
             color: darken(#c1c1c1, 20%);
             width: 200px;
@@ -208,11 +209,51 @@ b, strong {
         }
     }
     .content-right {
-        width: 50%;
-        margin-top: 65px;
+        width: 65%;
+        margin-top: 25px;
         margin-left: auto;
         .advantages {
-            
+            .advantage__item {
+                padding: 25px 0;
+                margin: 10px 10px 0 0;
+                font-size: 16px;
+                text-align: center;
+                color: #b2b3b5;
+                p {
+                    line-height: 60px;
+                    font-size: 60px;
+                    color: #ececec;
+                    span {
+                        font-size: 20px;
+                        line-height: 20px;
+                    }
+                }
+            }
+            // Градиентные границы можно было сделать через border-image, но у меня получалось слишком страшно и криво
+            .advantage__item[data-item="1"] {
+                background: linear-gradient(to right bottom, rgba(255,255,255, 0) 40%, rgba(255,255,255,0.07));
+                &:hover {
+                    background: linear-gradient(to right bottom, rgba(255,255,255, 0) 40%, rgba(255,255,255,0.15));
+                }
+            }
+            .advantage__item[data-item="2"] {
+                background: linear-gradient(to left bottom, rgba(255,255,255, 0) 40%, rgba(255,255,255,0.07));
+                &:hover {
+                    background: linear-gradient(to left bottom, rgba(255,255,255, 0) 40%, rgba(255,255,255,0.15));
+                }
+            }
+            .advantage__item[data-item="3"] {
+                background: linear-gradient(to right top, rgba(255,255,255, 0) 40%, rgba(255,255,255,0.07));
+                &:hover {
+                    background: linear-gradient(to right top, rgba(255,255,255, 0) 40%, rgba(255,255,255,0.15));
+                }
+            }
+            .advantage__item[data-item="4"] {
+                background: linear-gradient(to left top, rgba(255,255,255, 0) 40%, rgba(255,255,255,0.07));
+                &:hover {
+                    background: linear-gradient(to left top, rgba(255,255,255, 0) 40%, rgba(255,255,255,0.15));
+                }
+            }
         }
     }
 }
