--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,10 +1,10 @@
-// $default-font: "Roboto", sans-serif;
+$default-font: "MuseoSans", sans-serif;
 // $headers-font: "RobotoCondensed", sans-serif;
 // $dark-primary: #303f9f;
 // $light-primary: #c5cae9;
 // $primary: #3f51b5;
- $text: #c1c1c1;
- $accent: #ff440b;
+$text: #c1c1c1;
+$accent: #ff440b;
 // $primary-text: #212121;
 // $secondary-text: #757575;
 // $divider: #bdbdbd;
