--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -22,7 +22,7 @@ body {
 	min-width: 320px;
 	position: relative;
 	line-height: 1.65;
-	// font-family: $default-font;
+	font-family: $default-font;
 	overflow-x: hidden;
 	// color: $text;
 	input, textarea {
@@ -181,13 +181,29 @@ b, strong {
     }
     .content-left {
         margin-top: 70px;
+        padding-left: 40px;
         &>h1 {
+            display: block;
+            position: relative;
             text-transform: uppercase;
             background: linear-gradient(45deg, white , $accent 75%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            font-size: 58px;
+            font-size: 3.8em;
             margin-bottom: 0;
+            font-weight: bold;
+            &::before {
+                position: absolute;
+                content: "";
+                bottom: -5px;
+                right: 100px;
+                width: 43px;
+                height: 70px;
+                transform: rotateX(30deg);
+                background-image: url('../img/mask.png');
+                background-position: contain;
+                background-repeat: no-repeat;
+            }
         }
         span {
             display: block;
@@ -199,7 +215,7 @@ b, strong {
             margin-top: -10px;
         }
         .btn {
-            margin-top: 100px;
+            margin-top: 90px;
             display: block;
             color: darken(#c1c1c1, 20%);
             width: 200px;
@@ -219,15 +235,21 @@ b, strong {
                 font-size: 16px;
                 text-align: center;
                 color: #b2b3b5;
-                p {
-                    line-height: 60px;
-                    font-size: 60px;
-                    color: #ececec;
-                    span {
-                        font-size: 20px;
-                        line-height: 20px;
+                .advantage__text {
+                    p {
+                        line-height: 60px;
+                        font-size: 60px;
+                        color: #ececec;
+                        font-weight: bold;
+                        margin-bottom: -5px;
+                        span {
+                            font-size: 20px;
+                            margin-top: -10px;
+                            line-height: 20px;
+                            font-weight: 100;
+                        }
                     }
-                }
+                }  
             }
             // Градиентные границы можно было сделать через border-image, но у меня получалось слишком страшно и криво
             .advantage__item[data-item="1"] {
