--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -120,34 +120,45 @@ b, strong {
 
 .main {
     background: url('/img/background.png') center no-repeat;
-    background-size: 165%;
+    background-size: cover;
     padding-bottom: 150px;
-    .main__nav {
-        height: 100px;
+    position: relative;
+    .mask-wrap {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            display: block;
+            position: relative;
+            z-index: 1;
+        }
+    }
+    .navbar {
+        min-height: 90px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        position: relative;
         border-top: 1px solid #3d3d3d;
         border-bottom: 1px solid #3d3d3d;
-        &::before {
-            position: absolute;
-            content: "";
-            top: 0;
-            left: 0;
-            z-index: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.2;
-            background: black;
+        padding: 0;
+        background-color: rgba(0, 0, 0, 0.2);
+        .navbar-collapse {
+            align-items: flex-end;
+            justify-content: flex-end;
+        }
+        .navbar-toggler {
+            margin-right: 20px;
         }
         .logo-wrap {
-            height: 100%;
+            min-height: 90px;
             text-align: center;
             align-self: flex-start;
-            position: relative;
-            z-index: 1;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -155,21 +166,19 @@ b, strong {
             border-left: 1px solid #3d3d3d;
             border-right: 1px solid #3d3d3d;
         }
-        ul {
-            list-style: none;
-            position: relative;
-            z-index: 1;
-        }
         li {
             font-size: 16px;
             margin-right: 30px;
             display: inline-block;
-            padding: 10px 0 0 0;
+            padding: 0;
             border-bottom: 1px solid transparent;
             a {
                 color: #c1c1c1;
                 text-decoration: none;
                 transition: all 0.6s ease;
+                i{
+                    margin-right: 10px;
+                }
             }
             &:hover {
                 border-bottom-color: #3d3d3d;
@@ -188,20 +197,10 @@ b, strong {
             background: linear-gradient(45deg, white , $accent 75%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            font-size: 3.8em;
+            font-size: 3.625em;
             margin-bottom: 0;
             font-weight: bold;
-            &::before {
-                position: absolute;
-                content: "";
-                bottom: 0;
-                right: 138px;
-                width: 50px;
-                height: 80px;
-                background-image: url('../img/mask.png');
-                background-position: cover;
-                background-repeat: no-repeat;
-            }
+            z-index: 0;
         }
         span {
             display: block;
